[package]
name = "g29"
version = "0.1.0"
edition = "2021"
author = "Ezra Ellette"
license = "MIT"

[lib]
doctest = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
hidapi = { version = "2.6.1", features = [
  "macos-shared-device",
  "windows-native",
] }
rayon = { version = "1.10.0" }
