[package]
name = "g29"
version = "1.0.0"
edition = "2021"
license = "MIT"

[lib]
doctest = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = { version = "2.6.1", features = [
  "macos-shared-device",
  "windows-native",
] }
rayon = { version = "1.10.0" }

[badges.maintenance]
status = "actively-developed"
