[package]
name = "lib-g29"
version = "1.0.1"
edition = "2021"
license = "MIT"
authors = ["Ezra Ellette"]
description = "A library for interfacing with the Logitech G29 racing wheel"
repository = "https://github.com/EzraEllette/g29"
keywords = ["g29", "logitech", "racing", "wheel", "controller"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
doctest = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = { version = "2.6.1", features = [
  "macos-shared-device",
  "windows-native",
] }
rayon = { version = "1.10.0" }
